--- a/类加载器/类加载器.md
+++ b/类加载器/类加载器.md
@@ -5,10 +5,10 @@ ClassLoader（类加载器）负责将Class加载到JVM中，主要功能：
 + 审查每个类应该由谁加载，使用父优先的等级加载机制
 + 将Class字节码重新解析成JVM统一要求的对象格式
 
-## 类结构分析
+## 一、类结构分析
 
  使用或扩展ClassLoader主要会用到的方法：
- ![ClassLoader类主要结构信息](https://github.com/McHeat/Note/img/classloader/ClassLoader01.JPG)
+ ![ClassLoader类主要结构信息](https://github.com/McHeat/Note/blob/master/img/classloader/ClassLoader01.JPG)
  
  + ***defineClass*** \
    将byte字节流解析成JVM能够识别的CLass对象
@@ -22,7 +22,7 @@ ClassLoader（类加载器）负责将Class加载到JVM中，主要功能：
  ClassLoader是一个抽象类，实现自定义ClassLoader一般都会继承**URLClassLoader**子类，因为这个子类已实现了大部分功能。
  ClassLoader还提供了一些辅助方法，如获取class文件的方法***getResource***、***getResourceAsStream***等，还有获取SystemClassLoader的方法等。
  
-## 等级加载机制
+## 二、等级加载机制
 
 
  ClassLoader使用的接待机制为**上级委托接待机制**。
@@ -50,5 +50,5 @@ ClassLoader（类加载器）负责将Class加载到JVM中，主要功能：
  - 显式加载  
    在代码中通过调用ClassLoader类来加载一个类的方式。
    
-## 如何加载class文件
+## 三、如何加载class文件
 
