--- a/DB/Oracle/表分区.md
+++ b/DB/Oracle/表分区.md
@@ -65,7 +65,7 @@
  STORE IN (emp1,emp2,emp3,emp4,emp5,emp6,emp7,emp8);
  ```
  + 组合范围列表分区  
- 组合范围散列分区是基于范围分区和列表分区，表首先按某列进行范围分区，然后按某列进行列表分区，分区之中的分区被称为子分区。
+ 组合范围列表分区是基于范围分区和列表分区，表首先按某列进行范围分区，然后按某列进行列表分区，分区之中的分区被称为子分区。
  ```
  CREATE TABLE SALES 
  (
