--- a/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
+++ b/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
@@ -1,46 +1,42 @@
+# 1. Service Discovery: Eureka Clients
 
-  
-
-## 1. Service Discovery: Eureka Clients ##
-
-Service Discovery 是微服务架构（a microservice based architecture）的一个关键原则。尝试手动配置每个客户端或或某种约定 （some form of convention）是非常困难，也是不稳定的（brittle）  Eureka是Netflix Service Discovery的服务器与终端（Server and Client0. Eureka能够通过配置和扩展成更高的可用性，每个服务器的注册状态复制给其他服务器。
+ 服务发现是微服务架构的关键原则之一。尝试手动或约定方式配置每个客户端非常困难且脆弱。Eureka是Netflix服务发现的服务器与客户端。Eureka服务器能够通过配置和扩展提高可用性，每个服务器的注册状态复制给其他服务器。
 
 ## 1.1 How to Include Eureka Client ##
-通过使用 ` org.springframework.cloud`群语句开头以及artifact id` spring-cloud-starter-netflix-eureka-client`. 查看 [Spring Cloud Project page](https://projects.spring.io/spring-cloud/)来学习更多如何使用当前的Spring Cloud Release Train来设置编译系统。
+
+ 通过groupId `org.springframework.cloud` 以及artifactId `spring-cloud-starter-netflix-eureka-client` 来引入。
+ 查看 [Spring Cloud Project](https://projects.spring.io/spring-cloud/)来学习更多如何使用当前的Spring Cloud Release Train设置构建系统。
 
 ## 1.2 Registering with Eureka ##
-当有客户端为 Eureka登记时, 需要提供自身的元数据（meta-data） ，例如：host and port, health indicator URL, home page等。 Eureka从每个服务器的实例（instance）接收 heartbeat messages 。 如果heartbeat在一个配置时间内（configurable timetable）获取失败（fails），此实例会被从registry上移除。
+ 当客户端向Eureka注册时, 需要提供自身的元数据，例如：主机host、端口port、健康监控URL、主页等。
+ Eureka从每个服务器的实例（instance）接收心跳消息。 如果心跳在配置时间内（configurable timetable）失败，此实例会被从注册服务器上移除。
 
-Example eureka client:
-    
-    @Configuration
-    @ComponentScan
-    @EnableAutoConfiguration
-    @RestController
-    public class Application {
+ Eureka客户端示例(标准的SpringBoot应用):
+ ```
+ @Configuration
+ @ComponentScan
+ @EnableAutoConfiguration
+ @RestController
+ public class Application {
     
     @RequestMapping("/")
     public String home() {
-    	return "Hello world";
+      return "Hello world";
     }
     
     public static void main(String[] args) {
-    	new SpringApplicationBuilder(Application.class).web(true).run(args);
+      new SpringApplicationBuilder(Application.class).web(true).run(args);
     }
-    
-    }
-(i.e. utterly normal Spring Boot app). classpath中使用  `spring-cloud-starter-netflix-eureka-client` 能使你的程序自动注册到Eureka Server. 要求配置（Configuration)位于Eureka server.
-
- Example:
-
-**application.yml. **
-
-    eureka:
-      client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-
-"defaultZone" 是一句神奇的字符串回退值（string fallback value），为任何不能传递优先权（express a preference (i.e. it’s a useful default)）提供服务器URL
+ }
+ ```
+ 类路径中的 `spring-cloud-starter-netflix-eureka-client` 能使你的程序自动注册到Eureka服务器。Eureka服务器的地址需要配置，如在application.yml配置：
+ ```
+ eureka:
+  client:
+   serviceUrl:
+    defaultZone: http://localhost:8761/eureka/
+ ```
+ "defaultZone" 是一个神奇的字符串回馈值，为所有未配置指定服务器URL的客户端提供默认值。
 
  `Environment`的缺省程序名(service ID), 虚拟主机（virtual host) 和非保护端口 （non-secure port）分别是 `${spring.application.name}`, `${spring.application.name}` and `${server.port} `
 
