--- a/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
+++ b/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
@@ -38,51 +38,50 @@
  ```
  "defaultZone" 是一个神奇的字符串回馈值，为所有未配置指定服务器URL的客户端提供默认值。
 
- `Environment`的缺省程序名(service ID), 虚拟主机（virtual host) 和非保护端口 （non-secure port）分别是 `${spring.application.name}`, `${spring.application.name}` and `${server.port} `
+ 缺省程序名称(service ID), 虚拟主机（virtual host) 和非保护端口 （non-secure port）会从`Environment`中获取，分别是 `${spring.application.name}`、`${spring.application.name}` 和 `${server.port}`
 
-在classpath中使用 `spring-cloud-starter-netflix-eureka-client` 可以使app进入（into both ）Eureka "instance" (i.e. it registers itself)和"client" (i.e. it can query the registry to locate other services). 此instance behaviour由`eureka.instance.* `配置关键字（configuration keys）驱动的, 如果能确认程序具有` spring.application.name` (Eureka service ID, or VIP是默认的)来保证缺省值 .
+在类路径中添加 `spring-cloud-starter-netflix-eureka-client` 可以使应用同时作为Eureka的实例(它会向服务器注册自身)和客户端(可通过服务器查询定位其他服务实例)。实例的行为由`eureka.instance.* `配置关键字驱动的, 如果程序具有` spring.application.name`属性(Eureka默认服务ID)也可使用这些默认值。
 
 查看 [EurekaInstanceConfigBean](https://github.com/spring-cloud/spring-cloud-netflix/blob/master/spring-cloud-netflix-eureka-client/src/main/java/org/springframework/cloud/netflix/eureka/EurekaInstanceConfigBean.java) 和 [EurekaClientConfigBean](https://github.com/spring-cloud/spring-cloud-netflix/blob/master/spring-cloud-netflix-eureka-client/src/main/java/org/springframework/cloud/netflix/eureka/EurekaClientConfigBean.java) 以获取更详细的信息。
 
-禁止Eureka Discovery Client可设置 `eureka.client.enabled`为 `false`.
+可通过设置 `eureka.client.enabled`为 `false`来禁止Eureka Discovery Client。
 
 ## 1.3 Authenticating with the Eureka Server ##
-## 1.3  Eureka Server验证 ##
-如果其中 `eureka.client.serviceUrl.defaultZone`的网址 URLs 具有凭证嵌入式 (credentials embedded),HTTP基本验证会自动添加到你的 eureka client，(curl style, 例如 [http://user:password@localhost:8761/eureka](http://user:password@localhost:8761/eureka)). 更复杂的需求可以创建   `DiscoveryClientOptionalArgs`类型 的`@Bean` 以及插入`ClientFilter` 实例, 所有这些都可以应用于从client 到server的调用（calls）.
+如果`eureka.client.serviceUrl.defaultZone`的URLs嵌入了验证信息，HTTP基本验证会自动添加到你的客户端(curl方式, 例如 `http://user:password@localhost:8761/eureka`)。更复杂的需求可以创建   `DiscoveryClientOptionalArgs`类型的`@Bean` 以及注入`ClientFilter`实例, 上述所有配置都会被应用于从客户端到服务器的调用。
 
 [Note]
-由于Eureka的限制， 支持 per-server basic auth credentials不现实的 , 因此只有第一次设置有用。
+由于Eureka的限制，每个服务器都执行基本验证是无法实现的，因此只有第一个发现的服务器会执行验证。
 
 ## 1.4 Status Page and Health Indicator ##
- Eureka实例的status page和 health indicators分别默认为"/info" 和 "/health" ,是Spring Boot Actuator application 里有用端点（useful endpoints）的默认位置（default locations）. 你需要替换这些, 即使Actuator application 使用的是a non-default context 、servlet path的(e.g. `server.servletPath=/foo`) 或者 management endpoint path (e.g. `management.contextPath=/admin`). 
-Example:
+ Eureka实例的status page和health indicators分别默认为"/info" 和 "/health" ,是Spring Boot Actuator里可用端点的默认位置（default locations）。你需要替换这些, 即使Actuator application 使用的是非默认context 、servlet路径(e.g. `server.servletPath=/foo`)或者 管理节点路径(e.g. `management.contextPath=/admin`)。
+实例:
 
-**application.yml. **
-
-    eureka:
-      instance:
-    statusPageUrlPath: ${management.context-path}/info
-    healthCheckUrlPath: ${management.context-path}/health
-上述链接显示了被客户端clients消耗掉的元数据metadata, 并且用于一些判断是否需要向程序发送请求的脚本中, 因此如果they是准确的将会非常有用。
+**application.yml**
+```
+eureka:
+ instance:
+  statusPageUrlPath: ${management.context-path}/info
+  healthCheckUrlPath: ${management.context-path}/health
+```
+上述链接显示了被客户端clients使用的元数据，并且在一些场景中用于判断是否需要向程序发送请求, 因此准确指定这些信息将会非常有用。
 
 ## 1.5 Registering a Secure Application ##
-## 1.5 注册一个安全的应用程序 ##
-如果你希望 app能够被其他网址HTTPS连接到，可以在`EurekaInstanceConfig`设置两个flags,分别是`eureka.instance.[nonSecurePortEnabled，securePortEnabled]=[false,true]` 。这样能使Eureka publish instance information为保密通信（secure communication ）显示明确的参数 （explicit preference）. Spring Cloud DiscoveryClient可以一直返回到一个以https开头的 URI，并且Eureka (native) instance information可以有一个具有 secure health check的URL.
+如果你希望 app能够通过HTTPS连接，可以在`EurekaInstanceConfig`设置两个flags,分别是`eureka.instance.[nonSecurePortEnabled，securePortEnabled]=[false,true]` 。这样能使Eureka发布实例信息时明确指定使用安全通信。Spring Cloud 的`DiscoveryClient`会返回一个https开头的URI，并且本地Eureka实例信息会使用通信安全的health check的URL.
 
-因为这种方式 Eureka 作用在内部, 也能为status和home page发布非安全URL，除非明确覆盖。也能够使用占位符（placeholders）来配置eureka instance urls,例如：
+因为Eureka的内部工作机制, 在没有明确覆盖的情况下依然为status和home page发布非安全URL。能够使用占位符来配置eureka实例的url，例如：
 
 **application.yml. **
-
-    eureka:
-      instance:
-    statusPageUrl: https://${eureka.hostname}/info
-    healthCheckUrl: https://${eureka.hostname}/health
-    homePageUrl: https://${eureka.hostname}/
-
-(注意 `${eureka.hostname}` 是本机占位符（native placeholder ）只可用在Eureka的后续版本.使用Spring placeholders可以实现相同的作用，例如使用`${eureka.instance.hostName}`)
+```
+eureka:
+ instance:
+  statusPageUrl: https://${eureka.hostname}/info
+  healthCheckUrl: https://${eureka.hostname}/health
+  homePageUrl: https://${eureka.hostname}/
+```
+(注意 `${eureka.hostname}` 是本地占位符，只可用在Eureka的后续版本.使用Spring 占位符可以实现相同的作用，例如使用`${eureka.instance.hostName}`)
 
 [Note]
-如果你的app 是由代理服务器（proxy）运行, 并且SSL终止处（ termination）也在该代理服务器（proxy）中(例如 ，如果你作为服务运行在Cloud Foundry或其他平台) ，那么需要确保该proxy "forwarded" headers 是被拦截的并且由程序负责控制.如果精确配置'X-Forwarded-\*` headers，在Spring Boot app中的嵌入式Tomcat container可以自动实现上述功能。典型错误是：该链接被你的程序释放到自身中(错误的host, 端口或协议)。
+如果你的app是由通过代理服务器（proxy）运行, 并且SSL终端也在该代理中(例如 ，作为服务运行在Cloud Foundry或其他平台)，那么需要确保该代理的`forwarded`报文头是被拦截的并且由程序可处理。在Spring Boot中内置的Tomcat 容器如果精确配置'X-Forwarded-\*`报文头，可以自动实现上述功能。典型错误是：该链接被你的程序释放到自身中(错误的host, 端口或协议)。
 
 ## 1.6 Eureka’s Health Checks ##
 
