Update 01.Service Discovery-Eureka Clients.md

--- a/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
+++ b/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
@@ -12,7 +12,7 @@
  Eureka从每个服务器的实例（instance）接收心跳消息。 如果心跳在配置时间内（configurable timetable）失败，此实例会被从注册服务器上移除。
 
  Eureka客户端示例(标准的SpringBoot应用):
- ```
+ ```Java
  @Configuration
  @ComponentScan
  @EnableAutoConfiguration
