--- a/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
+++ b/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
@@ -49,8 +49,7 @@
 ## 1.3 Authenticating with the Eureka Server ##
 如果`eureka.client.serviceUrl.defaultZone`的URLs嵌入了验证信息，HTTP基本验证会自动添加到你的客户端(curl方式, 例如 `http://user:password@localhost:8761/eureka`)。更复杂的需求可以创建   `DiscoveryClientOptionalArgs`类型的`@Bean` 以及注入`ClientFilter`实例, 上述所有配置都会被应用于从客户端到服务器的调用。
 
-[Note]
-由于Eureka的限制，每个服务器都执行基本验证是无法实现的，因此只有第一个发现的服务器会执行验证。
+> 由于Eureka的限制，每个服务器都执行基本验证是无法实现的，因此只有第一个发现的服务器会执行验证。
 
 ## 1.4 Status Page and Health Indicator ##
  Eureka实例的status page和health indicators分别默认为"/info" 和 "/health" ,是Spring Boot Actuator里可用端点的默认位置（default locations）。你需要替换这些, 即使Actuator application 使用的是非默认context 、servlet路径(e.g. `server.servletPath=/foo`)或者 管理节点路径(e.g. `management.contextPath=/admin`)。
@@ -80,19 +79,19 @@ eureka:
 ```
 (注意 `${eureka.hostname}` 是本地占位符，只可用在Eureka的后续版本.使用Spring 占位符可以实现相同的作用，例如使用`${eureka.instance.hostName}`)
 
-[Note]
-如果你的app是由通过代理服务器（proxy）运行, 并且SSL终端也在该代理中(例如 ，作为服务运行在Cloud Foundry或其他平台)，那么需要确保该代理的`forwarded`报文头是被拦截的并且由程序可处理。在Spring Boot中内置的Tomcat 容器如果精确配置'X-Forwarded-\*`报文头，可以自动实现上述功能。典型错误是：该链接被你的程序释放到自身中(错误的host, 端口或协议)。
+> 如果你的app是由通过代理服务器（proxy）运行, 并且SSL终端也在该代理中(例如 ，作为服务运行在Cloud Foundry或其他平台)，那么需要确保该代理的`forwarded`报文头是被拦截的并且由程序可处理。在Spring Boot中内置的Tomcat 容器如果精确配置'X-Forwarded-\*`报文头，可以自动实现上述功能。典型错误是：该链接被你的程序释放到自身中(错误的host, 端口或协议)。
 
 ## 1.6 Eureka’s Health Checks ##
 
 默认的，Eureka使用client heartbeat来决定客户端是否挂起（up）。除非指定，否则Discovery Client不能按照Spring Boot Actuator传输当前的health check状态。也就意味着成功登记后的Eureka会总是 声明该程序application是 'UP' 状态. 这种行为可能被授权的Eureka health checks 警告，从而导致一直传送程序状态给 Eureka. 结果其他的每个程序都不能与in state的程序通信，从而挂起('UP').
 
 **application.yml. **
-
-    eureka:
-      client:
-    healthcheck:
-      enabled: true
+```
+eureka:
+ client:
+  healthcheck:
+   enabled: true
+```
 [Warning]
 `eureka.client.healthcheck.enabled=true` z只能被设置在**application.yml**中。 给bootstrap.yml赋值会导致副作用出现,如登记过的eureka出现`UNKNOWN `状态。
 
