--- a/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
+++ b/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
@@ -12,7 +12,7 @@
  Eureka从每个服务器的实例（instance）接收心跳消息。 如果心跳在配置时间内（configurable timetable）失败，此实例会被从注册服务器上移除。
 
  Eureka客户端示例(标准的SpringBoot应用):
- ```Java
+ ```java
  @Configuration
  @ComponentScan
  @EnableAutoConfiguration
@@ -30,7 +30,7 @@
  }
  ```
  类路径中的 `spring-cloud-starter-netflix-eureka-client` 能使你的程序自动注册到Eureka服务器。Eureka服务器的地址需要配置，如在application.yml配置：
- ```
+ ```yaml
  eureka:
   client:
    serviceUrl:
@@ -56,7 +56,7 @@
 实例:
 
 **application.yml**
-```
+```yaml
 eureka:
  instance:
   statusPageUrlPath: ${management.context-path}/info
@@ -69,8 +69,8 @@ eureka:
 
 因为Eureka的内部工作机制, 在没有明确覆盖的情况下依然为status和home page发布非安全URL。能够使用占位符来配置eureka实例的url，例如：
 
-**application.yml. **
-```
+**application.yml**
+```yaml
 eureka:
  instance:
   statusPageUrl: https://${eureka.hostname}/info
@@ -85,15 +85,14 @@ eureka:
 
 默认的，Eureka使用client heartbeat来决定客户端是否挂起（up）。除非指定，否则Discovery Client不能按照Spring Boot Actuator传输当前的health check状态。也就意味着成功登记后的Eureka会总是 声明该程序application是 'UP' 状态. 这种行为可能被授权的Eureka health checks 警告，从而导致一直传送程序状态给 Eureka. 结果其他的每个程序都不能与in state的程序通信，从而挂起('UP').
 
-**application.yml. **
-```
+**application.yml**
+```yaml
 eureka:
  client:
   healthcheck:
    enabled: true
 ```
-[Warning]
-`eureka.client.healthcheck.enabled=true` z只能被设置在**application.yml**中。 给bootstrap.yml赋值会导致副作用出现,如登记过的eureka出现`UNKNOWN `状态。
+>`eureka.client.healthcheck.enabled=true`只能被设置在**application.yml**中。 给bootstrap.yml赋值会导致副作用出现,如登记过的eureka出现`UNKNOWN `状态。
 
 若需要控制health checks, 可以考虑执行自己的 `com.netflix.appinfo.HealthCheckHandler`。
 
@@ -104,18 +103,19 @@ eureka:
 
 Cloudfoundry 具有全局路由（global router），所以相同app中所有实例有一样的hostname (其他具有相似的架构的PaaS solutions也是相同的 ). 使用Eureka并不需要栅栏（barrier）, 但是如果你使用该路由（router） (被建议的, 或强制性依赖于你当前创建的平台), 需要明确设置hostname和port numbers (secure or non-secure) ，如此才能使用路由. 你或许也希望使用实例元数据（instance metadata），那么需要区别客户端里的实例（the instances on the client） (例如定制的负载平衡器（custom load balancer)）. 默认 `eureka.instance.instanceId` 是 `vcap.application.instance_id`.  例如:
 
-**application.yml. **
-
-    eureka:
-      instance:
+**application.yml**
+```yaml
+eureka:
+  instance:
     hostname: ${vcap.application.uris[0]}
     nonSecurePort: 80
+```
 根据你的 Cloudfoundry instance里规定的安全规则（security rules） ,你或许可以注册（ register） 并且使用host VM for direct service-to-service calls的IP地址. 此方案对Pivotal Web Services (PWS)中还不可用.
 
 ### 1.7.2 Using Eureka on AWS ###
 
 如果程序计划配置给AWS cloud, 那么Eureka instance将不得不配置给 AWS aware，并且这可以通过按照如下方式定制EurekaInstanceConfigBean来实现:
-    
+```java
     @Bean
     @Profile("!default")
     public EurekaInstanceConfigBean eurekaInstanceConfig(InetUtils inetUtils) {
@@ -124,6 +124,7 @@ Cloudfoundry 具有全局路由（global router），所以相同app中所有实
       b.setDataCenterInfo(info);
       return b;
     }
+```
 ### 1.7.3 Changing the Eureka Instance ID ###
 
 普通Netflix Eureka instance是需要使用等价于host name (如每个host都只有一个service)的ID来注册. Spring Cloud Eureka 提供可感测的系统默认值（sensible default），如下面所示: `${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}}}. For example myhost:myappname:8080`.
@@ -131,14 +132,16 @@ Cloudfoundry 具有全局路由（global router），所以相同app中所有实
 如果提供`eureka.instance.instanceId`的唯一识别符，使用Spring Cloud可以重载系统默认值。例如:
 
 **application.yml. **
-    eureka:
-      instance:
+```yaml
+eureka:
+  instance:
     instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
+```
 使用元数据以及配置在localhost的多重服务实例, 随机值随之生效而使实例唯一（instance unique）. 在Cloudfoundry中`vcap.application.instance_id` 会被自动填充进Spring Boot 程序, 因此随机值就不必要了.
 
 ## 1.8 Using the EurekaClient ##
 一旦你的app是一个可被发现客户端（discovery client），就可以用它来从Eureka Server中发现服务实例（service instances）。一种方式是 使用本地的`com.netflix.discovery.EurekaClient` (对照Spring Cloud `DiscoveryClient`)。
-
+```java
     @Autowired
     private EurekaClient discoveryClient;
     
@@ -146,13 +149,14 @@ Cloudfoundry 具有全局路由（global router），所以相同app中所有实
     InstanceInfo instance = discoveryClient.getNextServerFromEureka("STORES", false);
     return instance.getHomePageUrl();
     }
+```
 [Tip]
 不要在`@PostConstruct` method 或者`@Scheduled `method (或者任何 `ApplicationContext`还不能开始的地方)中使用`EurekaClient`  。 在 `SmartLifecycle `( `phase=0`) 中初始化因此早期可依赖另一个更高phase的 `SmartLifecycle` 获得的`EurekaClient` 
 
 ### 1.8.1 EurekaClient without Jersey ###
 
 一般 EurekaClient使用Jersey进行HTTP通讯。如果想要避免来自于Jersey的依赖性, 可以从依赖性（dependencies）中拒绝。 Spring Cloud能够自动配置依赖Spring RestTemplate的传送客户端（transport client）。
-
+```xml
     <dependency>
     <groupId>org.springframework.cloud</groupId>
     <artifactId>spring-cloud-starter-eureka</artifactId>
@@ -171,23 +175,25 @@ Cloudfoundry 具有全局路由（global router），所以相同app中所有实
     </exclusion>
     </exclusions>
     </dependency>
+```
 ## 1.9 Alternatives to the native Netflix EurekaClient ##
 ## 1.9 本地Netflix EurekaClient的可替换性 ##
 不需要使用原始的Netflix `EurekaClient` ，一般在封装的分类（sort）后使用会更方便。Spring Cloud支持 [Feign](https://cloud.spring.io/spring-cloud-static/spring-cloud-netflix/1.4.4.RELEASE/multi/multi_spring-cloud-feign.html) (REST client编辑器)，Spring [RestTemplate](https://cloud.spring.io/spring-cloud-static/spring-cloud-netflix/1.4.4.RELEASE/multi/multi_spring-cloud-ribbon.html) 使用逻辑Eureka service identifiers (VIPs) 代替 物理的URLs。使用固定列表的物理服务器（physical servers）配置Ribbon可以简单设置 `<client>.ribbon.listOfServers`到的物理地址的comma-separated list(或hostnames), 该地址中`<client> `是客户端的ID。
 
 也可以使用`org.springframework.cloud.client.discovery.DiscoveryClient` 给discovery clients提供简单API，此非Netflix的特性, 例.
-
+```java
     @Autowired
     private DiscoveryClient discoveryClient;
     
     public String serviceUrl() {
-    List<ServiceInstance> list = discoveryClient.getInstances("STORES");
-    if (list != null && list.size() > 0 ) {
-    return list.get(0).getUri();
+        List<ServiceInstance> list = discoveryClient.getInstances("STORES");
+        if (list != null && list.size() > 0 ) {
+            return list.get(0).getUri();
+        }
+        return null;
     }
-    return null;
-    }
- ## 1.10 Why is it so Slow to Register a Service? ##
+```
+## 1.10 Why is it so Slow to Register a Service? ##
 ## 1.10 为何Register a Service如此之慢? ##
 开始一个实例也包括对注册表的周期性的heartbeat(通过 client’s serviceUrl) ，默认为30秒。除非instance, the server和the client 在本地cache中具有相同的元数据 (需要获取3 heartbeats)， 否则service是不能被clients发现的。也可以使用`eureka.instance.leaseRenewalIntervalInSeconds`改变周期，这样就可以加速clients链接其他services的进程. 生产中保持缺省会更好，因为有一些服务内部的计算指令会设想租赁更新周期（make assumptions about the lease renewal period）.
 
@@ -197,10 +203,12 @@ If you have deployed Eureka clients to multiple zones than you may prefer that t
 
 接下来需要通知Eureka你的service在哪个zone。可以使用`metadataMap` 所有权来实现. 例如，如果`service 1`被配置到`zone 1 `和`zone 2`你需要在`service 1`里按照如下所示来设置Eureka属性。
 **Service 1 in Zone 1**
-
+```
     eureka.instance.metadataMap.zone = zone1
     eureka.client.preferSameZoneEureka = true
+```
 **Service 1 in Zone 2**
-
+```
     eureka.instance.metadataMap.zone = zone2
     eureka.client.preferSameZoneEureka = true
+```
