--- a/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
+++ b/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
@@ -83,7 +83,9 @@ eureka:
 
 ## 1.6 Eureka’s Health Checks ##
 
-默认的，Eureka使用client heartbeat来决定客户端是否挂起（up）。除非指定，否则Discovery Client不能按照Spring Boot Actuator传输当前的health check状态。也就意味着成功登记后的Eureka会总是 声明该程序application是 'UP' 状态. 这种行为可能被授权的Eureka health checks 警告，从而导致一直传送程序状态给 Eureka. 结果其他的每个程序都不能与in state的程序通信，从而挂起('UP').
+默认的，Eureka使用客户端心跳来决定客户端是否在线（up）。
+未指定情况，Discovery Client不会向每个Spring Boot Actuator传播当前的健康检查状态。也就意味着成功登记后的Eureka会总是声明该程序application是 'UP' 状态。
+开启Eureka健康检测后这种行为可能发起警告，从而上传程序状态给Eureka。这样，其他的每个程序都不会与非'UP'状态的程序通信。
 
 **application.yml**
 ```yaml
@@ -94,14 +96,20 @@ eureka:
 ```
 >`eureka.client.healthcheck.enabled=true`只能被设置在**application.yml**中。 给bootstrap.yml赋值会导致副作用出现,如登记过的eureka出现`UNKNOWN `状态。
 
-若需要控制health checks, 可以考虑执行自己的 `com.netflix.appinfo.HealthCheckHandler`。
+若需要控制健康检测, 可以考虑实现自定义`com.netflix.appinfo.HealthCheckHandler`。
 
 ## 1.7 Eureka Metadata for Instances and Clients ##
-花费一些时间来了解 Eureka metadata的工作方式是很值得的, 如此你就可以在自己的平台上做出有意的事情. hostname, IP address, port numbers, status page and health chec具有k标准元数据。这些发布在服务登记处（ service registry） 并被客户端用于与服务器直接联系。额外的元数据可附加在`eureka.instance.metadataMap`中的instance registration, 并且可被远程客户端使用, 但是一般来说不会改变客户端的行为, 除非意识到元数据的意义meaning。 下面讲述了一些Spring Cloud分配metadata map的特例
+花费一些时间来了解 Eureka元数据的工作方式是很值得的, 如此你可以在自己的平台上做出一些有效的配置使用。
+主机名称、IP地址、端口号、状态页和健康检查等都是一些标准元数据。这些元数据会发布到服务注册中，客户端通过它们与服务器直接联系。
+其他元数据可附加在实例注册信息的`eureka.instance.metadataMap`属性中（这种方式同样适用于远程客户端）, 
+但是一般来说在不了解到元数据的含义的情况下不会改变客户端的行为。 下面讲述了一些Spring Cloud已经指明作用的metadata map的特例。
 
 ### 1.7.1 Using Eureka on Cloudfoundry ###
 
-Cloudfoundry 具有全局路由（global router），所以相同app中所有实例有一样的hostname (其他具有相似的架构的PaaS solutions也是相同的 ). 使用Eureka并不需要栅栏（barrier）, 但是如果你使用该路由（router） (被建议的, 或强制性依赖于你当前创建的平台), 需要明确设置hostname和port numbers (secure or non-secure) ，如此才能使用路由. 你或许也希望使用实例元数据（instance metadata），那么需要区别客户端里的实例（the instances on the client） (例如定制的负载平衡器（custom load balancer)）. 默认 `eureka.instance.instanceId` 是 `vcap.application.instance_id`.  例如:
+Cloudfoundry具有全局路由，所以同一个应用的所有实例有相同的主机名称(其他相似架构的PaaS解决方案也是如此)。
+如果你使用路由(依赖于你当前设置的平台强烈或强制性使用), 就需要明确设置主机名称和端口号(安全或非安全)。
+你或许希望使用实例元数据来区别客户端实例(例如自定义的负载均衡器）。默认地，`eureka.instance.instanceId`同`vcap.application.instance_id`。
+例如:
 
 **application.yml**
 ```yaml
@@ -110,11 +118,12 @@ eureka:
     hostname: ${vcap.application.uris[0]}
     nonSecurePort: 80
 ```
-根据你的 Cloudfoundry instance里规定的安全规则（security rules） ,你或许可以注册（ register） 并且使用host VM for direct service-to-service calls的IP地址. 此方案对Pivotal Web Services (PWS)中还不可用.
+根据你的Cloudfoundry实例里规定的安全规则，你或许可以注册并且使用主机的IP地址来实现服务对服务的调用。
+此方案暂时对Pivotal Web Services (PWS)中不可用.
 
 ### 1.7.2 Using Eureka on AWS ###
 
-如果程序计划配置给AWS cloud, 那么Eureka instance将不得不配置给 AWS aware，并且这可以通过按照如下方式定制EurekaInstanceConfigBean来实现:
+如果计划把程序AWS云平台配置, 那么Eureka实例将必须配置为AWS可用，可以通过如下方式定制EurekaInstanceConfigBean来实现:
 ```java
     @Bean
     @Profile("!default")
@@ -125,11 +134,14 @@ eureka:
       return b;
     }
 ```
+
 ### 1.7.3 Changing the Eureka Instance ID ###
 
-普通Netflix Eureka instance是需要使用等价于host name (如每个host都只有一个service)的ID来注册. Spring Cloud Eureka 提供可感测的系统默认值（sensible default），如下面所示: `${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}}}. For example myhost:myappname:8080`.
+一般地，Netflix的Eureka实例使用主机名称作为ID来注册(如每个主机都只有一个service)。Spring Cloud Eureka提供了一个更有意义的的系统默认值，
+如下面所示: `${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}}}`。
+例如：`myhost:myappname:8080`。
 
-如果提供`eureka.instance.instanceId`的唯一识别符，使用Spring Cloud可以重载系统默认值。例如:
+使用Spring Cloud可以通过`eureka.instance.instanceId`设置唯一识别符来重写实例ID。例如:
 
 **application.yml. **
 ```yaml
@@ -137,10 +149,12 @@ eureka:
   instance:
     instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
 ```
-使用元数据以及配置在localhost的多重服务实例, 随机值随之生效而使实例唯一（instance unique）. 在Cloudfoundry中`vcap.application.instance_id` 会被自动填充进Spring Boot 程序, 因此随机值就不必要了.
+使用元数据, 当多个服务实例配置在localhost时, 随机值随之生效而使实例唯一。
+在Cloudfoundry中，Spring Boot程序的`vcap.application.instance_id`会被自动填充, 因此随机值就不必要了。
 
 ## 1.8 Using the EurekaClient ##
-一旦你的app是一个可被发现客户端（discovery client），就可以用它来从Eureka Server中发现服务实例（service instances）。一种方式是 使用本地的`com.netflix.discovery.EurekaClient` (对照Spring Cloud `DiscoveryClient`)。
+一旦你的app注解了`@EnableDiscoveryClient`(或`@EnableEurekaClient`)，就可以用它来从Eureka Server中发现服务实例。
+一种方式是使用原生的`com.netflix.discovery.EurekaClient`(对照Spring Cloud的`DiscoveryClient`)。
 ```java
     @Autowired
     private EurekaClient discoveryClient;
@@ -150,12 +164,13 @@ eureka:
     return instance.getHomePageUrl();
     }
 ```
-[Tip]
-不要在`@PostConstruct` method 或者`@Scheduled `method (或者任何 `ApplicationContext`还不能开始的地方)中使用`EurekaClient`  。 在 `SmartLifecycle `( `phase=0`) 中初始化因此早期可依赖另一个更高phase的 `SmartLifecycle` 获得的`EurekaClient` 
+> 不要在`@PostConstruct`方法或者`@Scheduled`方法(或者任何 `ApplicationContext`还未开始的地方)中使用`EurekaClient`。
+> `EurekaClient`在`SmartLifecycle`(设置`phase=0`)中初始化，因此确定它可用的最早时机是另一个更高phase值的`SmartLifecycle`中。
 
 ### 1.8.1 EurekaClient without Jersey ###
 
-一般 EurekaClient使用Jersey进行HTTP通讯。如果想要避免来自于Jersey的依赖性, 可以从依赖性（dependencies）中拒绝。 Spring Cloud能够自动配置依赖Spring RestTemplate的传送客户端（transport client）。
+一般 EurekaClient使用Jersey进行HTTP通讯。如果不需要Jersey的依赖性, 可以从依赖性中排除。 
+Spring Cloud能够自动配置依赖Spring RestTemplate的传送客户端（transport client）。
 ```xml
     <dependency>
     <groupId>org.springframework.cloud</groupId>
@@ -177,10 +192,13 @@ eureka:
     </dependency>
 ```
 ## 1.9 Alternatives to the native Netflix EurekaClient ##
-## 1.9 本地Netflix EurekaClient的可替换性 ##
-不需要使用原始的Netflix `EurekaClient` ，一般在封装的分类（sort）后使用会更方便。Spring Cloud支持 [Feign](https://cloud.spring.io/spring-cloud-static/spring-cloud-netflix/1.4.4.RELEASE/multi/multi_spring-cloud-feign.html) (REST client编辑器)，Spring [RestTemplate](https://cloud.spring.io/spring-cloud-static/spring-cloud-netflix/1.4.4.RELEASE/multi/multi_spring-cloud-ribbon.html) 使用逻辑Eureka service identifiers (VIPs) 代替 物理的URLs。使用固定列表的物理服务器（physical servers）配置Ribbon可以简单设置 `<client>.ribbon.listOfServers`到的物理地址的comma-separated list(或hostnames), 该地址中`<client> `是客户端的ID。
+使用原生Netflix的`EurekaClient`不是必须的，但是在某种程度上，通过封装类使用会更方便。
+Spring Cloud支持 [Feign](https://cloud.spring.io/spring-cloud-static/spring-cloud-netflix/1.4.4.RELEASE/multi/multi_spring-cloud-feign.html)
+(REST客户端构造器)或使用逻辑Eureka服务定位器(VIPs)的Spring [RestTemplate](https://cloud.spring.io/spring-cloud-static/spring-cloud-netflix/1.4.4.RELEASE/multi/multi_spring-cloud-ribbon.html)来代替物理的URLs。
+使用一系列固定的物理服务器来配置Ribbon，可以通过简单地设置`<client>.ribbon.listOfServers`为逗号间隔的物理地址列表(或主机名称), 
+该地址中`<client>`是客户端的ID。
 
-也可以使用`org.springframework.cloud.client.discovery.DiscoveryClient` 给discovery clients提供简单API，此非Netflix的特性, 例.
+也可以使用非Netflix特性的`org.springframework.cloud.client.discovery.DiscoveryClient`，同样提供了发现客户端的简答API, 例.
 ```java
     @Autowired
     private DiscoveryClient discoveryClient;
@@ -194,21 +212,26 @@ eureka:
     }
 ```
 ## 1.10 Why is it so Slow to Register a Service? ##
-## 1.10 为何Register a Service如此之慢? ##
-开始一个实例也包括对注册表的周期性的heartbeat(通过 client’s serviceUrl) ，默认为30秒。除非instance, the server和the client 在本地cache中具有相同的元数据 (需要获取3 heartbeats)， 否则service是不能被clients发现的。也可以使用`eureka.instance.leaseRenewalIntervalInSeconds`改变周期，这样就可以加速clients链接其他services的进程. 生产中保持缺省会更好，因为有一些服务内部的计算指令会设想租赁更新周期（make assumptions about the lease renewal period）.
+注册成为一个Eureka实例同时需要向注册表(客户端配置的`serviceUrl`)发起周期性的心跳，默认周期为30秒。
+只有实例、服务器和客户端在各自的本地缓存中具有相同的元数据 (这个过程需要花费3次心跳的时间)，服务才会被客户端发现。
+也可以通过`eureka.instance.leaseRenewalIntervalInSeconds`改变周期，这样就可以加速客户端连接其他services的过程。
+生产中保持缺省值会更好，因为有一些服务内部会执行一些计算，这会消耗租约续期的周期。
 
-1.11 Zones
-If you have deployed Eureka clients to multiple zones than you may prefer that those clients leverage services within the same zone before trying services in another zone. 需要正确配置Eureka clients。
-首先，需要确保把Eureka servers配置给每一个zone，并且互为对等点（peers）。 查看[zones and regions](https://cloud.spring.io/spring-cloud-static/spring-cloud-netflix/1.4.4.RELEASE/multi/multi_spring-cloud-eureka-server.html#spring-cloud-eureka-server-zones-and-regions)这一章获取更详细的信息.
+## 1.11 Zones ##
 
-接下来需要通知Eureka你的service在哪个zone。可以使用`metadataMap` 所有权来实现. 例如，如果`service 1`被配置到`zone 1 `和`zone 2`你需要在`service 1`里按照如下所示来设置Eureka属性。
-**Service 1 in Zone 1**
-```
+如果你把Eureka客户端部署到不同的区域，你可能更希望客户端租赁相同区域的服务，之后再尝试其他区域的服务。要实现这样的场景，就需要正确地配置Eureka客户端。  
+首先，需要确保把Eureka服务器部署到每一个zone，并且互为对等点（peers）。 
+查看[zones and regions](https://cloud.spring.io/spring-cloud-static/spring-cloud-netflix/1.4.4.RELEASE/multi/multi_spring-cloud-eureka-server.html#spring-cloud-eureka-server-zones-and-regions)这一章获取更详细的信息.
+
+接下来需要通知Eureka你的服务在哪个区域。可以使用`metadataMap`属性来实现。
+例如，如果`service 1`被配置到`zone 1 `和`zone 2`你需要在`service 1`里按照如下所示来设置Eureka属性。
+**区域1的服务**
+```yaml
     eureka.instance.metadataMap.zone = zone1
     eureka.client.preferSameZoneEureka = true
 ```
-**Service 1 in Zone 2**
-```
+**区域2的服务**
+```yaml
     eureka.instance.metadataMap.zone = zone2
     eureka.client.preferSameZoneEureka = true
 ```
