--- a/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
+++ b/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
@@ -226,12 +226,12 @@ Spring Cloud支持 [Feign](https://cloud.spring.io/spring-cloud-static/spring-cl
 接下来需要通知Eureka你的服务在哪个区域。可以使用`metadataMap`属性来实现。
 例如，如果`service 1`被配置到`zone 1 `和`zone 2`你需要在`service 1`里按照如下所示来设置Eureka属性。  
 **区域1的服务**
-```yaml
+```properties
     eureka.instance.metadataMap.zone = zone1
     eureka.client.preferSameZoneEureka = true
 ```
 **区域2的服务**
-```yaml
+```properties
     eureka.instance.metadataMap.zone = zone2
     eureka.client.preferSameZoneEureka = true
 ```
