Update 01.Service Discovery-Eureka Clients.md

--- a/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
+++ b/Spring/SpringCloud/Netflix/01.Service Discovery-Eureka Clients.md
@@ -143,7 +143,7 @@ eureka:
 
 使用Spring Cloud可以通过`eureka.instance.instanceId`设置唯一识别符来重写实例ID。例如:
 
-**application.yml. **
+**application.yml**
 ```yaml
 eureka:
   instance:
