--- a/Spring/SpringCloud/Netflix/02.Service Discovery- Eureka Server.md
+++ b/Spring/SpringCloud/Netflix/02.Service Discovery- Eureka Server.md
@@ -42,7 +42,8 @@ Eureka 背景阅读:  [flux capacitor](https://github.com/cfregly/fluxcapacitor/
 ## 2.3 High Availability, Zones and Regions ##
 Eureka服务端不具有后端储存（backend store），但是在注册中心的服务实例都必须发送心跳，用以使他们的注册数据保持最新（因此Eureka server可以在内存中处理）。
 Clients也具有eureka注册信息的缓存（in-memory cache）（因此对于服务的单次请求不必每次都访问注册中心）。
-默认每个Eureka server也是Eureka client，并且需要（至少一个）服务URL来定位peer。如果不提供URL，service也会运行工作，但是会倾倒（shower）出伴随大量噪声的logs ，而不能注册到peer。
+默认每个Eureka服务器同时也是Eureka客户端，并且需要（至少一个）服务URL来定位对等点。
+如果不提供URL，服务器也会运行工作，但是会输出不能注册到对等点的大量日志。
 
 查看[below for details of Ribbon support](https://cloud.spring.io/spring-cloud-static/spring-cloud-netflix/1.4.4.RELEASE/multi/multi_spring-cloud-ribbon.html)  Zones and Regions.
 
