--- a/Spring/SpringCloud/Netflix/03.Circuit Breaker- Hystrix Clients.md
+++ b/Spring/SpringCloud/Netflix/03.Circuit Breaker- Hystrix Clients.md
@@ -1,57 +1,62 @@
 # 3. Circuit Breaker: Hystrix Clients #
-Netflix创建了一个库调用：[Hystrix](https://github.com/Netflix/Hystrix)实现 [circuit breaker pattern](https://martinfowler.com/bliki/CircuitBreaker.html)。在微服务构架下具有多层服务响应。
+Netflix创建了一个库调用：[Hystrix](https://github.com/Netflix/Hystrix)实现 [断路器（Circuit Breaker）模式](https://martinfowler.com/bliki/CircuitBreaker.html)。在微服务构架下具有多层服务响应。
 
 **Figure 3.1. Microservice Graph**
 ![](https://raw.githubusercontent.com/spring-cloud/spring-cloud-netflix/1.4.x/docs/src/main/asciidoc/images/Hystrix.png)
-下层服务的服务失败可能引起连锁故障直达用户。在`metrics.rollingStats.timeInMilliseconds` (default: 10 秒)创建的滚动窗口下，当特定服务的calls量比`circuitBreaker.requestVolumeThreshold`（默认20个请求）更大时，失效率也会比`circuitBreaker.errorThresholdPercentage `(default: >50%)更大，环路及呼叫（call）不能建立。为避免出错及开环，开发者可以提供回退（fallback）。
+下层服务的服务失败可能引起连锁故障直达用户。在`metrics.rollingStats.timeInMilliseconds` (默认10秒)创建的滚动窗口下，
+当特定服务的调用量比`circuitBreaker.requestVolumeThreshold`（默认20个请求）更大时，
+失效率也会比`circuitBreaker.errorThresholdPercentage `(default: >50%)更大，
+环路及调用不能建立。为避免出错及开环，开发者可以提供回退（fallback）。
 
 **Figure 3.2. Hystrix fallback prevents cascading failures**
 ![](https://raw.githubusercontent.com/spring-cloud/spring-cloud-netflix/1.4.x/docs/src/main/asciidoc/images/HystrixFallback.png)
 
-使用开环阻止连锁故障，允许压制或使服务时间失效来进行恢复。回退（fallback）是另一种Hystrix protected call，静态数据或sane空值。fallbacks可以被链接，因此第一个fallback值制作其他的call，这些call反过来回退到静态数据。
+使用开环阻止连锁故障，允许压制或使服务时间失效来进行恢复。回退（fallback）是另一种Hystrix保护式调用，静态数据或sane空值。
+fallbacks可以被链接，因此第一个fallback值导致其他业务调用返回到静态数据。
 
 ## 3.1 How to Include Hystrix ##
 
-使用group `org.springframework.cloud`开头，以及人工 id `spring-cloud-starter-netflix-hystrix`。 参见[Spring Cloud Project page](https://projects.spring.io/spring-cloud/)来使用当前Spring Cloud Release Train设置编译系统。
+使用group `org.springframework.cloud`开头，以及artificateId `spring-cloud-starter-netflix-hystrix`。 参见[Spring Cloud Project page](https://projects.spring.io/spring-cloud/)来使用当前Spring Cloud Release Train设置编译系统。
 
-Example boot app:
+Example boot app:  
+```java  
+@SpringBootApplication
+@EnableCircuitBreaker
+public class Application {
+ 
+ public static void main(String[] args) {
+   new SpringApplicationBuilder(Application.class).web(true).run(args);
+ }
+    
+}
 
-    @SpringBootApplication
-    @EnableCircuitBreaker
-    public class Application {
+@Component
+public class StoreIntegration {
+ @HystrixCommand(fallbackMethod = "defaultStores")
+ public Object getStores(Map<String, Object> parameters) {
+   //do stuff that might fail
+ }
     
-    public static void main(String[] args) {
-    new SpringApplicationBuilder(Application.class).web(true).run(args);
-    }
-    
-    }
-    
-    @Component
-    public class StoreIntegration {
-    
-    @HystrixCommand(fallbackMethod = "defaultStores")
-    public Object getStores(Map<String, Object> parameters) {
-    //do stuff that might fail
-    }
-    
-    public Object defaultStores(Map<String, Object> parameters) {
-    return /* something useful */;
-    }
-    }
+ public Object defaultStores(Map<String, Object> parameters) {
+   return /* something useful */;
+ }
+}  
+```
 
-`@HystrixCommand`是由Netflix的库调用"[javanica](https://github.com/Netflix/Hystrix/tree/master/hystrix-contrib/hystrix-javanica)"提供。Spring Cloud自动覆盖（wraps）Spring beans，Spring beans的标注存在于与Hystrix的断路器相连的代理服务器。
-配置`@HystrixCommand` 可使用`commandProperties`，归属于`@HystrixProperty`注释列表，可参考[这里](https://github.com/Netflix/Hystrix/tree/master/hystrix-contrib/hystrix-javanica#configuration)。 [Hystrix wiki ](https://github.com/Netflix/Hystrix/wiki/Configuration)详细介绍了可用性能。
+`@HystrixCommand`是由Netflix的库调用"[javanica](https://github.com/Netflix/Hystrix/tree/master/hystrix-contrib/hystrix-javanica)"提供。
+Spring Cloud通过这个注解自动用包装Spring beans到一个与Hystrix的断路器相关联的代理。断路器会计算得出什么时间开启和关闭线路，以及失败的情况下做什么。  
+可使用`commandProperties`来配置`@HystrixCommand`，包含了一系列`@HystrixProperty`注释，可参考[这里](https://github.com/Netflix/Hystrix/tree/master/hystrix-contrib/hystrix-javanica#configuration)。 [Hystrix wiki ](https://github.com/Netflix/Hystrix/wiki/Configuration)详细介绍了可用性能。
 ## 3.2 Propagating the Security Context or using Spring Scopes ##
-因为缺省说明？（it）在线程池里执行命令（以防超时），如果想要多线程局部环境传输给`@HystrixCommand`，可使缺省说明不运作。通过要求Hystrix使用不同的"Isolation Strategy"可以切换Hystrix 使用相同的thread，在caller 使用同样的配置时，或直接在注释表里（caller ）？。
-    
-    @HystrixCommand(fallbackMethod = "stubMyService",
-    commandProperties = {
-      @HystrixProperty(name="execution.isolation.strategy", value="SEMAPHORE")
-    }
-    )
-...
- 如果使用`@SessionScope` 或 `@RequestScope`也同样适用。当因为运行异常而这样做时会显示不能发现作用域环境。
-也可以选择设置`hystrix.shareSecurityContext`性质为`true`。这样做会自动配置Hystrix并发策略插件钩？ （concurrency strategy plugin hook），该Hystrix concurrency strategy plugin hook通过Hystrix command将`SecurityContext`从主线上传送到使用的thread上。Hystrix不允许多程hystrix concurrency strategy被注册，因此需将自己的`HystrixConcurrencyStrategy`作为Spring bean清空来使扩展机制（extension mechanism）可用。Spring Cloud会在Spring context中搜寻执行情况，并将其包裹进（wrap）自己的插件里（plugin）。
+如果想要将一些Thread Local上下文传给`@HystrixCommand`，缺省说明将不会运作，因为HystrixCommand会在线程池中执行命令（防止超时）。通过要求Hystrix使用不同的"Isolation Strategy"可以切换Hystrix使用与调用者使用相同的线程，通过一些配置或直接通过注释的方式。
+```java  
+ @HystrixCommand(fallbackMethod = "stubMyService",
+ commandProperties = {
+   @HystrixProperty(name="execution.isolation.strategy", value="SEMAPHORE")
+ }
+ )
+```
+ 使用`@SessionScope` 或 `@RequestScope`也同样适用。提示未发现scoped上下文的运行时异常的出现会告诉你何时去做。
+也可以选择设置`hystrix.shareSecurityContext`性质为`true`。这样做会自动配置Hystrix并发策略插件，该Hystrix并发策略插件通过Hystrix command将`SecurityContext`从主线上传送到使用的thread上。Hystrix不允许注册多程hystrix Hystrix并发策略插件，因此需将自己的`HystrixConcurrencyStrategy`声明为Spring bean来使用扩展机制。Spring Cloud会在Spring context中搜寻执行情况，并将其包裹进（wrap）自己的插件里（plugin）。
 
 ## 3.3 Health Indicator ##健康指标
 链接的circuit breakers的状态也会显露给呼叫程序的（calling application）`/health`终端。
