--- a/Spring/SpringCloud/Netflix/05.Hystrix Timeouts And Ribbon Clients.md
+++ b/Spring/SpringCloud/Netflix/05.Hystrix Timeouts And Ribbon Clients.md
@@ -1,18 +1,17 @@
 # 5. Hystrix Timeouts And Ribbon Clients #
 
-当使用缠绕着Ribbon clients的Hystrix命令时，你希望确保Hystrix的超时设置比Ribbon更长，包括任何可能会执行的潜在复执（retries）。例如，如果Ribbon连接超时是1秒，Ribbon client可能会重复请求3次，那么Hystrix的超时设置应该比3秒稍长。
+当使用围绕Ribbon客户端的Hystrix命令时，你希望确保Hystrix的超时设置比Ribbon更长，包括任何可能会执行的潜在重试。例如，如果Ribbon连接超时是1秒，Ribbon client可能会重复请求3次，那么Hystrix的超时设置应该比3秒稍长。
 
 ## 5.1 How to Include Hystrix Dashboard #
 
-使用group语句`org.springframework.cloud`开头， artifact id 为`spring-cloud-starter-hystrix-netflix-dashboard`。
-运行Hystrix Dashboard使用 `@EnableHystrixDashboard`注释Spring Boot main class。在Hystrix client 程序中，然后访问`/hystrix`，并将显示面板（dashboard）指向个体实例`/hystrix.stream`终端。
+为了在项目中引入HystrixDashboard，使用group语句`org.springframework.cloud`， artifact id 为`spring-cloud-starter-hystrix-netflix-dashboard`。
+为了运行Hystrix Dashboard，在Spring Boot的main类上添加`@EnableHystrixDashboard`注释。然后在Hystrix客户端程序中，可以访问`/hystrix`，并将显示面板（dashboard）指向个体实例`/hystrix.stream`终端。
 
-[Note]
-当链接使用HTTPS的 `a /hystrix.stream` 终端时，服务器用过的证书一定要被JVM信任。如果证书不被信任，必须要将证书导入进JVM，从而使 Hystrix Dashboard能与 stream终端成功连接。
+> 当链接使用HTTPS的 `/hystrix.stream` 终端时，服务器用过的证书一定要被JVM信任。如果证书不被信任，必须要将证书导入进JVM，从而使 Hystrix Dashboard能与 stream终端成功连接。
 
 ## 5.2 Turbine ##
 
-就系统总体health来说，查看个体实例 Hystrix 数据不是很有用。 Turbine是一个应用程序，为了能在Hystrix Dashboard中使用将所有相关的`/hystrix.stream`终端凝聚（aggregates）进组合的` /turbine.stream` 。Individual instances 是由Eureka定位。运行Turbine与使用` @EnableTurbine `注释来注释一样简单 (例如使用 spring-cloud-starter-netflix-turbine来设置 classpath)。所有的文件配置属性来自于[the Turbine 1 wiki ](https://github.com/Netflix/Turbine/wiki/Configuration-(1.x))应用。唯一的不同是： 除非 `turbine.instanceInsertPort=false.`否则`turbine.instanceUrlSuffix `不需要预留端口。
+就系统总体的健康状态来说，查看某个实例的Hystrix数据不是很有用。 Turbine是一个应用程序，为了能在Hystrix Dashboard中使用将所有相关的`/hystrix.stream`终端凝聚（aggregates）进组合的` /turbine.stream` 。Individual instances 是由Eureka定位。运行Turbine与使用` @EnableTurbine `注释来注释一样简单 (例如使用 spring-cloud-starter-netflix-turbine来设置 classpath)。所有的文件配置属性来自于[the Turbine 1 wiki ](https://github.com/Netflix/Turbine/wiki/Configuration-(1.x))应用。唯一的不同是： 除非 `turbine.instanceInsertPort=false.`否则`turbine.instanceUrlSuffix `不需要预留端口。
 
 
 一般，通过查找hostName和Eureka中port入口，Turbine在注册过的实例上寻找 `/hystrix.stream` 终端,然后附加`/hystrix.stream `给它。.如果实例的元数据包含`management.port`, 就会被用来给` /hystrix.stream `终端替换端口值。默认情况, 元数据入口 `management.port`等同于 `management.port`配置属性, 使用下述配置元数据入口可以被覆盖：
