--- a/Spring/SpringCloud/Netflix/03.Circuit Breaker- Hystrix Clients.md
+++ b/Spring/SpringCloud/Netflix/03.Circuit Breaker- Hystrix Clients.md
@@ -1,24 +1,22 @@
 # 3. Circuit Breaker: Hystrix Clients #
-Netflix创建了一个库调用：[Hystrix](https://github.com/Netflix/Hystrix)实现 [断路器（Circuit Breaker）模式](https://martinfowler.com/bliki/CircuitBreaker.html)。在微服务构架下具有多层服务响应。
+Netflix创建了一个[Hystrix](https://github.com/Netflix/Hystrix)的库来实现 [断路器（Circuit Breaker）模式](https://martinfowler.com/bliki/CircuitBreaker.html)。在微服务构架下具有多层次服务调用很常见，如下图：
 
 **Figure 3.1. Microservice Graph**
 ![](https://raw.githubusercontent.com/spring-cloud/spring-cloud-netflix/1.4.x/docs/src/main/asciidoc/images/Hystrix.png)
-下层服务的服务失败可能引起连锁故障直达用户。在`metrics.rollingStats.timeInMilliseconds` (默认10秒)创建的滚动窗口下，
-当特定服务的调用量比`circuitBreaker.requestVolumeThreshold`（默认20个请求）更大时，
-失效率也会比`circuitBreaker.errorThresholdPercentage `(default: >50%)更大，
-环路及调用不能建立。为避免出错及开环，开发者可以提供回退（fallback）。
+下层服务的服务失败可能引起级联失败直达用户。在`metrics.rollingStats.timeInMilliseconds` (默认10秒)创建的滚动窗口期内，当某个服务的调用数量超出了`circuitBreaker.requestVolumeThreshold`（默认20个请求）、失败率大于`circuitBreaker.errorThresholdPercentage`（默认>50%）时，
+环路会断开且不会建立调用。在出错及开环的情况下，开发者可以提供一种回退（fallback）。
 
 **Figure 3.2. Hystrix fallback prevents cascading failures**
 ![](https://raw.githubusercontent.com/spring-cloud/spring-cloud-netflix/1.4.x/docs/src/main/asciidoc/images/HystrixFallback.png)
 
-使用开环阻止连锁故障，允许压制或使服务时间失效来进行恢复。回退（fallback）是另一种Hystrix保护式调用，静态数据或sane空值。
-fallbacks可以被链接，因此第一个fallback值导致其他业务调用返回到静态数据。
+使用开环机制会阻止出现级联失败，为崩溃或失败的服务提供时间来从失败中恢复。回退（fallback）是另一种Hystrix保护式调用，返回静态数据或合理的空值。
+fallbacks可能通过链路连接，因此第一个fallback值会调用其他业务，而这些调用会依次返回静态数据。
 
 ## 3.1 How to Include Hystrix ##
 
-使用group `org.springframework.cloud`开头，以及artificateId `spring-cloud-starter-netflix-hystrix`。 参见[Spring Cloud Project page](https://projects.spring.io/spring-cloud/)来使用当前Spring Cloud Release Train设置编译系统。
+为了在项目中加入Hystrix，使用group `org.springframework.cloud`开头，以及artificateId `spring-cloud-starter-netflix-hystrix`的starter功能。 详情参照[Spring Cloud Project page](https://projects.spring.io/spring-cloud/)以根据当前版本Spring Cloud Release Train设置构造系统。
 
-Example boot app:  
+下面的示例展示了使用Hystrix断路器的小型Eureka服务:  
 ```java  
 @SpringBootApplication
 @EnableCircuitBreaker
@@ -43,9 +41,10 @@ public class StoreIntegration {
 }  
 ```
 
-`@HystrixCommand`是由Netflix的库调用"[javanica](https://github.com/Netflix/Hystrix/tree/master/hystrix-contrib/hystrix-javanica)"提供。
-Spring Cloud通过这个注解自动用包装Spring beans到一个与Hystrix的断路器相关联的代理。断路器会计算得出什么时间开启和关闭线路，以及失败的情况下做什么。  
-可使用`commandProperties`来配置`@HystrixCommand`，包含了一系列`@HystrixProperty`注释，可参考[这里](https://github.com/Netflix/Hystrix/tree/master/hystrix-contrib/hystrix-javanica#configuration)。 [Hystrix wiki ](https://github.com/Netflix/Hystrix/wiki/Configuration)详细介绍了可用性能。
+`@HystrixCommand`是由Netflix贡献的名为"[javanica](https://github.com/Netflix/Hystrix/tree/master/hystrix-contrib/hystrix-javanica)"的库提供。
+Spring Cloud会使用关联了Hystrix断路器的代理类来包装注解了`@HystrixCommand`的Spring beans。断路器会计算得出何时开启和关闭回路，以及失败的情况下做什么。  
+可通过`commandProperties`属性来配置`@HystrixCommand`，属性包含了一系列`@HystrixProperty`注释，详情可参考[这里](https://github.com/Netflix/Hystrix/tree/master/hystrix-contrib/hystrix-javanica#configuration)。 [Hystrix wiki](https://github.com/Netflix/Hystrix/wiki/Configuration)详细介绍了可用属性。  
+
 ## 3.2 Propagating the Security Context or using Spring Scopes ##
 如果想要将一些Thread Local上下文传给`@HystrixCommand`，缺省说明将不会运作，因为HystrixCommand会在线程池中执行命令（防止超时）。通过要求Hystrix使用不同的"Isolation Strategy"可以切换Hystrix使用与调用者使用相同的线程，通过一些配置或直接通过注释的方式。
 ```java  
