--- a/Spring/SpringCloud/Netflix/03.Circuit Breaker- Hystrix Clients.md
+++ b/Spring/SpringCloud/Netflix/03.Circuit Breaker- Hystrix Clients.md
@@ -46,7 +46,7 @@ Spring Cloud会使用关联了Hystrix断路器的代理类来包装注解了`@Hy
 可通过`commandProperties`属性来配置`@HystrixCommand`，属性包含了一系列`@HystrixProperty`注释，详情可参考[这里](https://github.com/Netflix/Hystrix/tree/master/hystrix-contrib/hystrix-javanica#configuration)。 [Hystrix wiki](https://github.com/Netflix/Hystrix/wiki/Configuration)详细介绍了可用属性。  
 
 ## 3.2 Propagating the Security Context or using Spring Scopes ##
-如果想要将一些Thread Local上下文传给`@HystrixCommand`，缺省说明将不会运作，因为HystrixCommand会在线程池中执行命令（防止超时）。通过要求Hystrix使用不同的"Isolation Strategy"可以切换Hystrix使用与调用者使用相同的线程，通过一些配置或直接通过注释的方式。
+如果想要将一些线程本地上下文传递给`@HystrixCommand`，缺省声明是不会生效的，因为HystrixCommand会在线程池中执行命令（防止超时）。通过在配置中或直接在注解中配置Hystrix使用不同"Isolation Strategy"，Hystrix可以切换到与调用者使用相同的线程。下面的示例讲解了通过注解方式设置线程：  
 ```java  
  @HystrixCommand(fallbackMethod = "stubMyService",
  commandProperties = {
@@ -54,27 +54,38 @@ Spring Cloud会使用关联了Hystrix断路器的代理类来包装注解了`@Hy
  }
  )
 ```
- 使用`@SessionScope` 或 `@RequestScope`也同样适用。提示未发现scoped上下文的运行时异常的出现会告诉你何时去做。
-也可以选择设置`hystrix.shareSecurityContext`性质为`true`。这样做会自动配置Hystrix并发策略插件，该Hystrix并发策略插件通过Hystrix command将`SecurityContext`从主线上传送到使用的thread上。Hystrix不允许注册多程hystrix Hystrix并发策略插件，因此需将自己的`HystrixConcurrencyStrategy`声明为Spring bean来使用扩展机制。Spring Cloud会在Spring context中搜寻执行情况，并将其包裹进（wrap）自己的插件里（plugin）。
+ 当涉及到`@SessionScope` 或 `@RequestScope`时，这种设置也同样适用。当遇到未发现域上下文的运行时异常时，你需要切换到使用同一个线程。  
+也可以选择设置`hystrix.shareSecurityContext`属性为`true`。这样做会自动配置Hystrix并发策略插件，该Hystrix并发策略插件会将主线程中的`SecurityContext`传送到使用了Hystix命令的线程中。Hystrix不允许注册多种Hystrix并发策略，因此一种扩展机制是将自己的`HystrixConcurrencyStrategy`声明为Spring的bean。Spring Cloud会在Spring上下文中查找你的实现类，并将其包装到自己的插件里（plugin）。
 
 ## 3.3 Health Indicator ##健康指标
-链接的circuit breakers的状态也会显露给呼叫程序的（calling application）`/health`终端。
-    
-    {
+已连接的断路器的状态也会暴露给调用程序的`/health`端点。  
+```json
+{
     "hystrix": {
-    "openCircuitBreakers": [
-    "StoreIntegration::getStoresByLocationLink"
-    ],
-    "status": "CIRCUIT_OPEN"
+        "openCircuitBreakers": [
+            "StoreIntegration::getStoresByLocationLink"
+        ],
+        "status": "CIRCUIT_OPEN"
     },
     "status": "UP"
-    }
-
+}
+```
 ## 3.4 Hystrix Metrics Stream ##
 
 使Hystrix metrics stream有效包括`spring-boot-starter-actuator`的依赖性。这会使`/hystrix.stream`作为管理终端显示。
-
-     <dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-actuator</artifactId>
+```xml
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
+```  
+
+## 注意  
+从Spring Boot 2.0版本开始，许多配置属性被重命名/迁移，因此开发者需要相应的更新`application.properties`/`application.yml`。Spring Boot提供了一个新的`spring-boot-properties-migrator`模块来过渡。一旦将jar添加到项目的依赖项中，它不仅会在启动时分析应用的环境变量并打印诊断说明，也会在运行时暂时迁移属性。在应用迁移中，下面的配置是必须的：  
+```xml
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-properties-migrator</artifactId>
+	<scope>runtime</scope>
+</dependency>
+```
