--- a/Spring/SpringCloud/Netflix/04.Circuit Breaker- Hystrix Dashboard.md
+++ b/Spring/SpringCloud/Netflix/04.Circuit Breaker- Hystrix Dashboard.md
@@ -1,6 +1,6 @@
 # 4. Circuit Breaker： Hystrix Dashboard #
 
-Hystrix的主要优点是权值（metrics）设置，它收集了每个HystrixCommand。Hystrix Dashboard展示了高效模式下的每个circuit breaker。
+Hystrix的主要优点之一是一系列的收集了每个HystrixCommand的metrics。Hystrix Dashboard有效地展示了每个断路器的健康状况。
 
 **Figure 4.1. Hystrix Dashboard**
 
