--- a/Spring/SpringCloud/Netflix/05.Hystrix Timeouts And Ribbon Clients.md
+++ b/Spring/SpringCloud/Netflix/05.Hystrix Timeouts And Ribbon Clients.md
@@ -1,13 +1,13 @@
 # 5. Hystrix Timeouts And Ribbon Clients #
 
-当使用围绕Ribbon客户端的Hystrix命令时，你希望确保Hystrix的超时设置比Ribbon更长，包括任何可能会执行的潜在重试。例如，如果Ribbon连接超时是1秒，Ribbon client可能会重复请求3次，那么Hystrix的超时设置应该比3秒稍长。
+当使用内置Ribbon客户端的Hystrix命令时，你希望确保Hystrix的超时设置比Ribbon更长，包括任何可能会执行的潜在重试。例如，如果Ribbon连接超时是1秒，Ribbon client可能会重复请求3次，那么Hystrix的超时设置应该比3秒稍长。
 
 ## 5.1 How to Include Hystrix Dashboard #
 
 为了在项目中引入HystrixDashboard，使用group语句`org.springframework.cloud`， artifact id 为`spring-cloud-starter-netflix-hystrix-dashboard`。
 为了运行Hystrix Dashboard，在Spring Boot的main类上添加`@EnableHystrixDashboard`注释。然后在Hystrix客户端程序中，可以访问`/hystrix`，并将显示面板（dashboard）指向个体实例`/hystrix.stream`终端。
 
-> 当链接使用HTTPS的 `/hystrix.stream` 终端时，服务器用过的证书一定要被JVM信任。如果证书不被信任，必须要将证书导入进JVM，从而使 Hystrix Dashboard能与 stream终端成功连接。
+> 当通过HTTPS方式与`/hystrix.stream`终端连接时，服务器使用的证书一定要被JVM信任。如果证书不被信任，必须要将证书导入进JVM，从而使Hystrix Dashboard能与stream终端成功连接。
 
 ## 5.2 Turbine ##
 
