--- a/Spring/SpringCloud/Netflix/05.Hystrix Timeouts And Ribbon Clients.md
+++ b/Spring/SpringCloud/Netflix/05.Hystrix Timeouts And Ribbon Clients.md
@@ -11,52 +11,57 @@
 
 ## 5.2 Turbine ##
 
-就系统总体的健康状态来说，查看某个实例的Hystrix数据不是很有用。 Turbine是一个应用程序，为了能在Hystrix Dashboard中使用将所有相关的`/hystrix.stream`终端凝聚（aggregates）进组合的` /turbine.stream` 。Individual instances 是由Eureka定位。运行Turbine与使用` @EnableTurbine `注释来注释一样简单 (例如使用 spring-cloud-starter-netflix-turbine来设置 classpath)。所有的文件配置属性来自于[the Turbine 1 wiki ](https://github.com/Netflix/Turbine/wiki/Configuration-(1.x))应用。唯一的不同是： 除非 `turbine.instanceInsertPort=false.`否则`turbine.instanceUrlSuffix `不需要预留端口。
+就系统总体的健康状态来说，查看某个实例的Hystrix数据不是很有用。 Turbine是一个应用程序，为了能在Hystrix Dashboard中使用将所有相关的`/hystrix.stream`终端聚合到`/turbine.stream` 。每个实例由Eureka定位。运行Turbine要求在主类上添加` @EnableTurbine `(例如使用 spring-cloud-starter-netflix-turbine来设置 classpath)。所有的文件配置属性来自于[the Turbine 1 wiki ](https://github.com/Netflix/Turbine/wiki/Configuration-(1.x))应用。唯一的不同是： `turbine.instanceUrlSuffix `不需要预留端口，因为未设置 `turbine.instanceInsertPort=false`时会自动处理。
 
 
-一般，通过查找hostName和Eureka中port入口，Turbine在注册过的实例上寻找 `/hystrix.stream` 终端,然后附加`/hystrix.stream `给它。.如果实例的元数据包含`management.port`, 就会被用来给` /hystrix.stream `终端替换端口值。默认情况, 元数据入口 `management.port`等同于 `management.port`配置属性, 使用下述配置元数据入口可以被覆盖：
+> 默认地，Turbine通过在Eureka上查找`hostName`和`port`实例并添加`/hystrix`来去顶注册实例的`/hystrix.stream`。 如果实例的元数据包含`management.port`, 这个值会替代给`/hystrix.stream`
+终端的`port`值。默认情况下, 实例的`management.port`元数据与`management.port`配置属性一致, 使用下述配置元数据入口可以被覆盖：
+> 
+> ```yaml
+> eureka:
+>  instance:
+>    metadata-map:
+>      management.port: ${management.port:8081}
+> ```
 
-    eureka:
-      instance:
-    metadata-map:
-      management.port: ${management.port:8081}
-
-配置关键字`turbine.appConfig` 是eureka serviceIds列表，turbine可以用来查找instances. turbine stream 然后被用于Hystrix dashboard， Hystrix dashboard使用类似下面这样的url : *http://my.turbine.sever:8080/turbine.stream?cluster=CLUSTERNAME *(如果名字是"default"那么集群参数（the cluster parameter）可以省略). The cluster parameter必须匹配于  `turbine.aggregator.clusterConfig`的一个入口。eureka 的返回是大写（uppercase）, 因此如果有一个叫做"customers"的app注册到Eureka，我们希望它可以正常运行:
-    
-    turbine:
-      aggregator:
+配置关键字`turbine.appConfig` 是一个eureka的serviceId列表，turbine可以用来查找实例。 turbine stream被用于Hystrix dashboard， Hystrix dashboard使用类似下面这样的url :   
+`http://my.turbine.sever:8080/turbine.stream?cluster=CLUSTERNAME`   
+(如果名字是"default"那么集群参数（the cluster parameter）可以省略)。`cluster`参数必须与`turbine.aggregator.clusterConfig`中的一个实体匹配。 eureka 的返回值是大写。 因此如果有一个叫做"customers"的app注册到Eureka，下面的示例会生效:
+```yaml
+turbine:
+  aggregator:
     clusterConfig: CUSTOMERS
-      appConfig: customers
+  appConfig: customers
+```
+若需要自定义Turbine使用的集群名称(不想将集群名称储存进`turbine.aggregator.clusterConfig`配置项)，那就提供一个`TurbineClustersProvider`类型的bean。  
 
-若需要按客户要求定制，Turbine应当使用cluster names (不想将集群名称cluster names储存进`turbine.aggregator.clusterConfig` configuration)来提供`TurbineClustersProvider` 。
-
-clusterName可以由`turbine.clusterNameExpression`中的 SPEL 表达式定制， root `InstanceInfo`的实例。缺省值是 `appName`, 意味着Eureka serviceId不再作为 cluster key (例如用户的`InstanceInfo` 具有一个`appName`是"CUSTOMERS")。 ` turbine.clusterNameExpression=aSGName`不同, 它是从 AWS ASG name中获取cluster name。例如：
-    
-    turbine:
-      aggregator:
+`clusterName`可以通过根路径下的`turbine.clusterNameExpression`中的 SPEL 表达式自定义，作为`InstanceInfo`的一个实例。 缺省值是 `appName`, 意味着Eureka的serviceId成为了集群的关键字(即用户的`InstanceInfo` 具有一个"CUSTOMERS"的`appName`)。 `turbine.clusterNameExpression=aSGName`是一个例外, 它是从 AWS ASG 名中获取集群名称。例如：
+```yaml
+turbine:
+  aggregator:
     clusterConfig: SYSTEM,USER
-      appConfig: customers,stores,ui,admin
-      clusterNameExpression: metadata['cluster']
+  appConfig: customers,stores,ui,admin
+  clusterNameExpression: metadata['cluster']
+```
 
-上例中4个services的cluster name被从 metadata map中提取出来, 预计包含"SYSTEM" 和 "USER"值。
+上例中4个服务的集群名称被从元数据map中提取出来, 预计包含"SYSTEM" 和 "USER"值。
 
-对所有的app使用"default" cluster需要一串文字表达式（使用单引号，如果在YAML 中要避开双引号）：
-    
-    turbine:
-      appConfig: customers,stores
-      clusterNameExpression: "'default'"
+对所有的应用使用"default"集群，需要一个文字表达式的字符串（使用单引号，如果在YAML 中要避开双引号）：
+```
+turbine:
+  appConfig: customers,stores
+  clusterNameExpression: "'default'"
+```
+Spring Cloud提供一个`spring-cloud-starter-netflix-turbine` ，具有所有在运行Turbine服务器所需要的依赖项。 只需要创建一个Spring Boot应用程序并使用`@EnableTurbine`来注释。
 
-Spring Cloud提供一个`spring-cloud-starter-netflix-turbine` ，具有所有在运行Turbine server时所需要获取的dependencies。只需要创建一个Spring Boot应用程序并使用`@EnableTurbine`来注释。
-
-[Note]
-默认Spring Cloud允许Turbine使用host和 port来允许每个host、每个cluster的多线程（multiple processes）。如果希望建立在Turbine上本地Netflix 行为不允许允许每个host、每个cluster的多线程（multiple processes） (instance id的关键字是hostname), t那么就设置`turbine.combineHostPort=false`。
+> 默认地，Spring Cloud允许Turbine使用host和port来运行“一个主机即一个集群”的多进程（multiple processes）。如果希望在Turbine上本地Netflix禁止“一个主机即一个集群”的多线程行为 (实例ID的关键字是主机名), 那么就设置`turbine.combineHostPort=false`。
 
 ## 5.3 Turbine Stream ##
 
-在某些环境下(例如 PaaS设置),从所有的分布式Hystrix commands中提取权值的典型Turbine模式是不工作的. 这种情况下你或许会想要把你的Hystrix commands权值传送给Turbine,Spring Cloud能够使用messaging来使其有效。所有你需要对client做的就是给 `spring-cloud-netflix-hystrix-stream` 附加 dependency 并且选择 `spring-cloud-starter-stream-*` （参考Spring Cloud Stream 文件, 如何配置 client credentials,但是应该为local broker解决  box？).
+在某些环境下(例如PaaS设置),从所有的分布式Hystrix命令中提取权值的典型Turbine模式是不工作的. 这种情况下你或许会想要把你的Hystrix命令权值推送给Turbine。Spring Cloud能够使用消息来实现这种功能。为了实现这种行为，你需要对client做的就是给应用添加`spring-cloud-netflix-hystrix-stream`依赖项并且选择 `spring-cloud-starter-stream-*` 参考Spring Cloud Stream 文件了解broker, 及如何配置客户端凭。对本地broker来说，这应该能够很好的生效。
 
-在服务器端创建Spring Boot application并使用`@EnableTurbineStream` 标记，默认会在8989端口出现 (将Hystrix dashboard指向该port, any path)。也可以使用`server.port` 或者 `turbine.stream.port`来定制端口。如果在类路径（classpath）上有`spring-boot-starter-web` 和 `spring-boot-starter-actuator`也可以实现相同功能, 就可以在另一个分开的、提供`management.port`的端口开发 Actuator endpoints(缺省使用Tomcat)。
+在服务器端创建Spring Boot应用并使用`@EnableTurbineStream` 标记，默认会在8989端口出现 (将Hystrix仪表盘指向该端口)。也可以使用`server.port` 或者 `turbine.stream.port`来定制端口。如果在类路径中有`spring-boot-starter-web` 和 `spring-boot-starter-actuator`也可以实现相同功能, 就可以在另一个分开的、提供`management.port`的端口开发 Actuator endpoints(缺省使用Tomcat)。
 
-也可以将Hystrix Dashboard指向Turbine Stream Server而非individual Hystrix streams。如果Turbine Stream运行在port 8989 on myhost, 就在Hystrix Dashboard的stream输入框中键入* http://myhost:8989*。Circuits会被置于serviceId之前, 然后是点, 接下来是circuit name。
+也可以将Hystrix Dashboard指向Turbine Stream服务器而非单个Hystrix streams。如果Turbine Stream运行在myhost主机的8989端口, 就在Hystrix Dashboard的stream输入框中键入* http://myhost:8989*。Circuits会使用相应的serviceId作为前缀, 然后是`.`, 接下来是断路器名称。
 
-Spring Cloud提供`spring-cloud-starter-netflix-turbine-stream` ，具有运行Turbine Stream server所需的所有dependencies- 只需要附加Stream binder。例如： `spring-cloud-starter-stream-rabbit`。因为是Netty-based，所以需要Java 8 来运行app。
+Spring Cloud提供`spring-cloud-starter-netflix-turbine-stream` ，具有运行Turbine Stream server所需的所有依赖性。只需要附加选择的Stream绑定器。例如： `spring-cloud-starter-stream-rabbit`。因为是基于Netty，所以需要Java 8来运行应用。
